<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nhind</groupId>
	<artifactId>config-service-jar</artifactId>
	<version>9.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>NHIN Direct Java RI config service jar</name>
    <description>NHIN Direct Java RI config service jar.</description>	
    <url>http://api.nhindirect.org/x/www/api.nhindirect.org/java/site/config/config-service-jar/${project.version}</url>  
	<scm>
		<url>scm:git:https://github.com/DirectProjectJavaRI/config-service-jar.git</url>
		<connection>scm:git:https://github.com/DirectProjectJavaRI/config-service-jar.git</connection>
	</scm>
    <prerequisites>
        <maven>3.5.0</maven>
    </prerequisites>  	
   <parent>
	   <groupId>org.springframework.boot</groupId>
	   <artifactId>spring-boot-dependencies</artifactId>
	   <version>3.5.0</version>
	   <relativePath />
   </parent>
    <developers>
        <developer>
            <name>Pat Pyette</name>
            <email>ppyette@inpriva.com</email>
            <roles>
                <role>owner</role>
            </roles>
        </developer> 
        <developer>
            <name>Greg Meyer</name>
            <id>GM2552</id>
            <email>gm2552@cerner.com</email>    
            <roles>
                <role>owner</role>
            </roles>                                                
        </developer>         
    </developers>

    <licenses>
       <license>
          <name>New BSD License</name>
          <url>http://nhindirect.org/BSDLicense</url>
       </license>
    </licenses>    
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<commons-net.version>3.11.1</commons-net.version>
	</properties>   	
	<dependencies>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-webflux</artifactId>
		</dependency>								 							
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>config-store</artifactId>
			<version>9.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>config-model</artifactId>
			<version>9.0.0-SNAPSHOT</version>
		</dependency>		
		<dependency>
			<groupId>org.nhind</groupId>
			<artifactId>direct-common</artifactId>
			<version>9.0.0-SNAPSHOT</version>	
		</dependency>											  
	      <dependency>
			<groupId>commons-net</groupId>
			<artifactId>commons-net</artifactId>
			<version>${commons-net.version}</version>
		</dependency>           	    	
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>test</scope>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-test</artifactId>
		    <scope>test</scope>
		</dependency>				
	    <dependency>
	       <groupId>io.r2dbc</groupId>
	       <artifactId>r2dbc-h2</artifactId>
	       <scope>test</scope>
	    </dependency>									        	 	            		
	</dependencies>
	<build>
		<plugins>
		      <plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-source-plugin</artifactId>
		        <executions>
		          <execution>
		            <goals>
		              <goal>jar</goal>
		            </goals>
		          </execution>
		        </executions>
		      </plugin>  
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
				<configuration>
				    <fork>true</fork>
					<optimize>true</optimize>
					<showDeprecation>true</showDeprecation>
					<encoding>UTF-8</encoding>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>		      		
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<!-- Spring is not very good at finding Entity objects in jar files that are nested
				     in jar files.  This will explode out the contents of the org.nhind library at runtime
				     so the entity objects can be found and managed
			    -->
			    <configuration>
			        <requiresUnpack>
			            <dependency>
			                <groupId>org.nhind</groupId>
			                <artifactId>config-store</artifactId>
			            </dependency>
			            <dependency>
			                <groupId>org.nhind</groupId>
			                <artifactId>config-service-jar</artifactId>
			            </dependency>			            
			        </requiresUnpack>
			        <jvmArguments>
		               -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005
		            </jvmArguments>
			        
			    </configuration>				
			</plugin>			

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<source>17</source>
					<show>public</show>
				</configuration>
	            <executions>
	              <execution>
	                <phase>package</phase>
	                <id>attach-javadocs</id>
	                <goals>
	                  <goal>jar</goal>
	                </goals>
	              </execution>
	            </executions>					
			</plugin>	
			<!-- for releases only			
	        <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-gpg-plugin</artifactId>
               <executions>
                 <execution>
                    <id>sign-artifacts</id>
                    <phase>package</phase>
                    <goals>
                       <goal>sign</goal>
                    </goals>
                 </execution>
               </executions>

            </plugin>		
            -->
	        <plugin>
	          <groupId>org.sonatype.central</groupId>
	          <artifactId>central-publishing-maven-plugin</artifactId>
	          <version>0.8.0</version>
	          <extensions>true</extensions>
	          <configuration>
	            <publishingServerId>central</publishingServerId>
	          </configuration>
	        </plugin>            
		</plugins>			
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>  
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
				    <additionalJOption>-Xdoclint:none</additionalJOption>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<docfilessubdirs>true</docfilessubdirs>
					<detectJavaApiLink>true</detectJavaApiLink>
					<detectLinks>true</detectLinks>
					<source>17</source>
					<show>protected</show>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<targetJdk>17</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<configuration>
					<effort>Max</effort>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
				<configuration>
					<tags>
						<tag>FIXME</tag>
						<tag>TODO</tag>
						<tag>WARN</tag>
						<tag>@deprecated</tag>
					</tags>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>
